--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <div class="bg">
             <img class="desktop_bck" src="images/bg-desktop-dark.jpg" alt="">
             <img class="mobile_bck" src="images/bg-mobile-dark.jpg" alt="">
@@ -50,7 +50,7 @@
                 <p>Drag and drop to reorder list</p>
             </div>
         </div>
-    </div>
+    </main>
 
   <div class="attribution">
     Challenge by: <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor.</a>
